[package]
name = "mystem"
version = "0.1.0"
authors = ["AB <ab@hexor.ru>"]
license = "WTFPL"
edition = "2018"
description = "Wrapper around Yandex Mystem for Rust."
homepage = "https://github.com/house-of-vanity/mystem-rs"
repository = "https://github.com/house-of-vanity/mystem-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.6"
serde_json = "1.0"
env_logger = "0.7"
log = { version = "^0.4.5", features = ["std"] }
failure = "0.1"